--- a/res/xml/spark_settings_statusbar.xml
+++ b/res/xml/spark_settings_statusbar.xml
@@ -187,7 +187,8 @@
         <com.spark.support.preferences.SystemSettingSwitchPreference
             android:key="qs_show_battery_estimate"
             android:title="@string/battery_estimate_title"
-            android:summary="@string/battery_estimate_summary" />
+            android:summary="@string/battery_estimate_summary"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 </PreferenceScreen>
