--- a/res/xml/spark_settings_themes.xml
+++ b/res/xml/spark_settings_themes.xml
@@ -157,18 +157,7 @@
     </PreferenceCategory>
 
      <PreferenceCategory
-        android:title="@string/qs_category">
-
-    <com.spark.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_enable_morphing"
-        android:title="@string/qs_enable_morphing"
-        android:defaultValue="true" />
-
-    <com.spark.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_invert_morphing"
-        android:title="@string/qs_invert_morphing"
-        android:dependency="qs_enable_morphing"
-        android:defaultValue="false" />
+        android:title="@string/qs_footer_category">
 
     <com.spark.support.preferences.SystemSettingSeekBarPreference
         android:key="qs_transparency"
